--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "worker:server": "tsx worker-server.ts",
     "lint": "next lint"
   },
   "dependencies": {
@@ -32,6 +33,7 @@
     "@types/node": "^22.14.0",
     "@types/react": "19.2.13",
     "@vitejs/plugin-react": "^5.0.0",
+    "tsx": "^4.21.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   },
