--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@supabase/supabase-js": "^2.42.5",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-dialog": "^2.6.0",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-shell": "^2",
     "@tauri-apps/plugin-sql": "^2",
