--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@supabase/supabase-js": "^2.42.5",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.6.0",
+    "@tauri-apps/plugin-fs": "^2.4.5",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-shell": "^2",
     "@tauri-apps/plugin-sql": "^2",
     "@tauri-apps/plugin-store": "^2",
+    "@types/fabric": "^5.3.11",
     "apify-client": "^2.22.0",
     "clsx": "^2.1.1",
+    "fabric": "^7.1.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
